<resources>
    <string name="app_name">Galanto</string>
    <string name="home">Home</string>
    <string name="games">Games</string>
    <string name="dashboard">Dashboard</string>
    <string name="files">Files</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Hello,</string>
    <string name="press_on_circle_nto_select_the_joint">Press on Circle \nto select the joint</string>
    <string name="monsoon">Monsoon</string>
    <string name="no">NO</string>
    <string name="assisted">Assisted</string>
    <string name="session_time">Session Time</string>
    <string name="movement_score">Movement Score</string>
    <string name="success_rate">Success Rate</string>
    <string name="delete">Delete</string>
    <string name="index_finger">Index Finger</string>
    <string name="history">History</string>

    <array name="dates">
        <item>12/7/2024</item>
        <item>13/7/2024</item>
        <item>14/7/2024</item>
        <item>15/7/2024</item>
        <item>16/7/2024</item>
    </array>

    <array name="session">
        <item>session_1</item>
        <item>session_2</item>
        <item>session_3</item>
        <item>session_4</item>
        <item>session_5</item>
        <item>session_6</item>

    </array>
</resources>