<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".DashboardFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".DashboardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="8dp"
            android:layout_weight="1"
            android:background="@drawable/spinner_backgroud"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/sp_date"
                style="@style/Widget.AppCompat.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:entries="@array/dates"
                android:padding="4dp"
                android:scrollIndicators="right" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="8dp"
            android:layout_weight="1"
            android:background="@drawable/spinner_backgroud"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/sp_sessions"
                style="@style/Widget.AppCompat.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:entries="@array/session"
                android:padding="4dp"
                android:scrollIndicators="right" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ig_image"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:src="@drawable/ig_hand"
            android:tag="@string/app_name"
            android:textAlignment="textEnd" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/ig_image"
            android:padding="8dp"
            android:text="@string/press_on_circle_nto_select_the_joint"
            android:textColor="@color/black" />

        <View
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignTop="@+id/ig_image"
            android:layout_marginStart="164dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/red_circle" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/monsoon"
                android:textColor="@color/black" />


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ig_monsoon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:scaleType="center"
                android:src="@drawable/ig_monsoon"
                android:tag="@string/app_name"
                android:textAlignment="textEnd"
                app:shapeAppearance="@style/circleImageView" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/assisted"
                android:textColor="@color/black" />


            <TextView
                android:id="@+id/circleTextView"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/circle_textview"
                android:gravity="center"
                android:text="@string/no"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/delete"
                android:src="@drawable/ic_delete"
                app:tint="@color/red" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/delete"
                android:src="@drawable/ic_restart"
                app:tint="@color/blue" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/session_time"
                android:textColor="@color/black" />


            <com.jay.galanto.utils.CircularProgressBar
                android:id="@+id/cpb_1"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/movement_score"
                android:textColor="@color/black" />


            <com.jay.galanto.utils.CircularProgressBar
                android:id="@+id/cpb_2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:padding="4dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/success_rate"
                android:textColor="@color/black" />

            <com.jay.galanto.utils.CircularProgressBar
                android:id="@+id/cpb_3"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center" />

        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/index_finger"
        android:gravity="center"
        android:textColor="@color/blue"
        android:textSize="16sp"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabTextColor="@drawable/icon_selected"
        app:tabIndicatorColor="@drawable/icon_selected"
        app:tabIndicatorFullWidth="true"
        app:tabBackground="@color/blue"
        />
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

</LinearLayout>
</ScrollView>